[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/D-DIN.otf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD-font.tres" type="DynamicFont" id=2]
[ext_resource path="res://HUD.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -404.0
margin_bottom = 144.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThrottleLabel" type="Label" parent="GridContainer"]
margin_right = 200.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
text = "Throttle"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThrottleLevel" type="ProgressBar" parent="GridContainer"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 33.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PropellantLabel" type="Label" parent="GridContainer"]
margin_top = 37.0
margin_right = 200.0
margin_bottom = 70.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Propellant"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PropellantLevel" type="ProgressBar" parent="GridContainer"]
margin_left = 204.0
margin_top = 37.0
margin_right = 404.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 2 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VelocityXLabel" type="Label" parent="GridContainer"]
margin_top = 74.0
margin_right = 200.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 2 )
text = "X-VELOCITY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VelocityXValue" type="Label" parent="GridContainer"]
margin_left = 204.0
margin_top = 74.0
margin_right = 404.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 2 )
text = "10.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VelocityYLabel" type="Label" parent="GridContainer"]
margin_top = 111.0
margin_right = 200.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 2 )
text = "Y-VELOCITY"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VelocityYValue" type="Label" parent="GridContainer"]
margin_left = 204.0
margin_top = 111.0
margin_right = 404.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 2 )
text = "-10.0"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -216.5
margin_bottom = -83.5
custom_fonts/font = SubResource( 1 )
text = "Land at the target by using the arrows to control the rotation and throttle"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -432.0
margin_right = 150.0
margin_bottom = -285.0
custom_fonts/font = SubResource( 2 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
